--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
 
     <header>
-        <h2><a href="https://sellvia.com/blog/motivational-quotes/">QuoteHub</a></h2>
+        <h2><a href="https://sellvia.com/blog/motivational-quotes/">Quote Generator App</a></h2>
     </header>
     <main>
         <div class="heading">
-            <h1>Quote Generator App</h1>
+            <h1>Javascript quote Generator </h1>
         </div>
 
         <div class="Quote">
